corrected hover effect on mobile view for works index

--- a/_sass/single-work.scss
+++ b/_sass/single-work.scss
@@ -141,7 +141,7 @@
   }
 
   .extra-long-summary {
-    margin-top: 250%;
+    margin-top: 210%;
   }
 
   .book-cover {
